[package]
name = "stdf_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-crc32 = "1.3.0"
ini = "1.3.0"
polars = "0.37.0"
regex = "1.10.3"
rust-stdf = {version="0.3.1", features=["bzip", "bzip2", "flate2", "gzip", "atdf", "serde"]}
sprintf = "0.1.4"

[lib]
name = "stdf_reader"
path = "src/lib.rs"
