[package]
name = "stdf_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const-crc32 = "1.3.0"
ini = "1.3.0"
polars = "0.43"
regex = "1.10.3"
rust-stdf = {version="0.3.1", features=["flate2", "atdf", "serde"]}
sprintf = "0.3"

[features]
default = ["gzip", "bzip", "zipfile"]
gzip = ["rust-stdf/gzip"]
bzip = ["rust-stdf/bzip"]
zipfile = ["rust-stdf/zipfile"]

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name = "stdf_reader"
path = "src/lib.rs"
