[package]
name = "stdf2ufile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
regex = "1.10.6"
sprintf = "0.3.1"

stdf_reader = {version="*", path="../stdf-reader/", features=["gzip", "bzip", "zipfile"]}
