[package]
name = "stdf2ui"
version = "0.1.0"
edition = "2021"
linker = "rust-lld"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
# color-eyre = "0.6.3"
crossterm = "0.27.0"
ratatui = {version="0.26.1", features=["all-widgets", "document-features"]}
regex = "1.10.4"
sprintf = "0.2.1"

stdf_reader = {version="*", path="../stdf-reader/", features=["gzip", "bzip", "zipfile"]}
tui-textarea = "0.4.0"
